changed homepage url to https:// and reverted path changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uconn_seniordesign",
-  "homepage": "http://charlesira.github.io/uconn_seniordesign_webapp",
+  "homepage": "https://charlesira.github.io/uconn_seniordesign_webapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
